--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -16,6 +16,8 @@ block content
     +breadcrumbs(class="container")
       +breadcrumbs-item('Главная','#')
       +breadcrumbs-item('Контакты')
+    #bx_basketFKauiI.bx-basket.bx-opener
+      +cart-aside(class='hidden xl_block')
     section.section.contacts.mt-20px.lg_mt-20px.mb-60px.lg_mb-64px
       .container.lg_grid.gap-x-20px.xxl_gap-x-30px(class="lg_grid-cols-[1fr_52%] xxl_grid-cols-[1fr_57%]")
         h1.section__title.mb-20px.col-start-1.col-end-3 Контакты
