--- a/src/pages/product.pug
+++ b/src/pages/product.pug
@@ -1,7 +1,7 @@
 extends ../pug/layout.pug
 
 block meta
-  title Каталог
+  title Продукт
   meta(name='description', content='')
 
 //- block append head
@@ -25,7 +25,6 @@ block content
           status_icon: 'check-2',
           status_icon_sizes: [8,8]
         })
-
 
 
 block prepend page-bottom
