--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -51,6 +51,7 @@
         @include has-goods;
         top: 8px;
         left: 38px;
+
         @media (min-width: $screen-xl) {
           top: 14px;
         }
@@ -81,6 +82,7 @@
     bottom: 0;
     right: 20px;
     left: 19px;
+    z-index: 10;
 
     @media (min-width: $screen-lg) {
       left: auto;
@@ -112,6 +114,7 @@
       .cart__section::after {
         display: none;
       }
+
       .cart__goods,
       .cart__sum {
         color: #fff;
@@ -204,3 +207,6 @@
   }
 
 }
+
+
+
