--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -587,6 +587,11 @@ body {}
 
     .section--info & {
       margin-bottom: 0;
+      margin-top: 60px;
+
+      @media (min-width: $screen-lg) {
+        margin-top: 0;
+      }
 
       @media (min-width: $screen-xxl) {
         margin-top: 30px;
