--- a/src/blocks/product-main/product-main.scss
+++ b/src/blocks/product-main/product-main.scss
@@ -2,9 +2,10 @@
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
+//! Карточка товара основная
 .product-main {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
   display: grid;
   grid-template-columns: auto 1fr;
@@ -14,27 +15,153 @@
     grid-column-end: 3;
   }
 
-  &__slider-wrapper {
+  &__sliders {
     grid-column-start: 1;
     grid-column-end: 3;
   }
 
   &__slider-item {
+    display: none;
     position: relative;
     height: 221px;
+
+    &:first-child {
+      display: inline-block;
+    }
+
+    &.tns-item {
+      display: inline-block;
+    }
   }
 
-  &__poster {
+  &__controls .slider__controls-btn {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #fff;
+    transform: translateY(-50%);
+    z-index: 10;
+    @apply shadow-default;
+
+    &--prev {
+      left: -15px;
+
+      svg {
+        transform: rotate(180deg);
+      }
+    }
+
+    &--next {
+      right: -15px;
+    }
+  }
+
+
+  &__previews-controls .slider__controls-btn {
+    position: absolute;
+    transform: translateY(-50%);
+    z-index: 10;
+    padding: 10px;
+
+    &--prev {
+      left: -10px;
+
+      svg {
+        transform: rotate(180deg);
+      }
+    }
+
+    &--next {
+      right: -10px;
+    }
+  }
+
+  &__video {
+    background-color: $tw-gray-200;
+  }
+
+  .slider__controls-btn:disabled {
+    opacity: 0.5;
+    background-color: $tw-gray-100;
+  }
+
+  &__previews-item {
+    cursor: pointer;
+  }
+
+  &__preview-img {
+    width: 80px;
+    height: 58px;
+    background-color: $tw-gray-200;
+    border-radius: 4px;
+    opacity: 0.3;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
+
+    .tns-slide-active:first-child + .tns-slide-active &,
+    .tns-item:not(.tns-slide-active) + .tns-slide-active + .tns-slide-active & {
+      opacity: 1;
+      border: 1px solid #D3D3D3;
+    }
   }
+
+
+  &__previews-wrapper {
+    margin-top: 12px;
+
+    .tns-ovh {
+      display: flex;
+      justify-content: center;
+    }
+
+    .tns-inner {
+      width: 268px;
+    }
+  }
+
+  &__price-wrapper {
+    display: flex;
+    align-items: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    color: $tw-black;
+  }
+
+  &__price {
+    font-size: 22px;
+    line-height: 28px;
+  }
+
+  &__price-old {
+    text-decoration: line-through;
+    opacity: 0.3;
+  }
+
+  //! Дополнительно
+  &__options {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  &__question {
+    display: flex;
+    justify-content: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  &__special {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+
 }
