--- a/src/blocks/video/video.scss
+++ b/src/blocks/video/video.scss
@@ -6,6 +6,17 @@
 
   $block-name:                &; // #{$block-name}__element
 
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  overflow: hidden;
+
+
+  &__item {
+    width: 100%;
+    height: 100%;
+  }
+
   &__btn-play {
     position: absolute;
 
@@ -36,7 +47,25 @@
 
   &.playing {
     #{$block-name}__poster {
-      opacity: 0;
+      display: none;
+    }
+    #{$block-name}__btn-play {
+      display: none;
     }
   }
+
+  &__poster {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
 }
