--- a/src/blocks/form/form.pug
+++ b/src/blocks/form/form.pug
@@ -35,6 +35,13 @@ mixin form(mods)
     block
 
 
+mixin btn-send
+
+  button.btn.btn--form-tg.absolute.right-0.bottom-0.flex.items-center.justify-center(class=allMods)&attributes(attributes)
+    +svg('tg-outline','',{width: 18, height: 18})
+    span Отправить
+
+
 
 mixin fieldset(legend, mods)
 
@@ -63,3 +70,6 @@ mixin fieldset(legend, mods)
   fieldset.form__fieldset(class=allMods)&attributes(attributes)
     legend.form__legend!= legend
     block
+
+
+
