--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -29,6 +29,7 @@
       margin-left: auto;
       padding-top: 5px;
       padding-bottom: 5px;
+      border-radius: 4px;
     }
   }
 
@@ -48,7 +49,7 @@
     padding: 30px 20px;
     max-width: 500px;
     max-height: 100vh;
-    border-radius: 4px;
+    border-radius: 24px;
     overflow-y: auto;
     box-sizing: border-box;
     background-color: $tw-gray-75;
@@ -70,6 +71,10 @@
         padding-right: 50px;
       }
     }
+
+    #{$block-name}--ask-doctor & {
+      min-width: 964px;
+    }
   }
 
   &__inner {
@@ -78,7 +83,8 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
+    margin-bottom: 10px;
   }
 
   &__title {
